home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  type: ExternalName
  externalName: broadmoor.brickyard.whitestar.systems
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
